tests/simple/src/bad/null-deref_read.c
#include <stdio.h>

int main() {
  int *ptr = NULL;

  int s = *ptr;
  return 0;
}
